# etf-brief

./: .gitignore  CHANGELOG.md  README.md  SKILL.md  config.example.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
docs/: CONFIGURATION.md  DATA_SOURCES.md  EXAMPLE_BRIEF.md  INSTALL.md  TROUBLESHOOTING.md
scripts/: fetcher.py  generate_brief.py  run.sh
scripts/etf_brief/: __init__.py  brief_generator.py  datetime_utils.py  fallback.py  http_utils.py  isin_validator.py  llm.py  logging_config.py  models.py  notify.py  onboard_cli.py  onboard_validate.py
scripts/etf_brief/prompts/: brief.md
tests/: conftest.py  test_brief_generator.py  test_fetcher_etf_prices.py  test_fetcher_fallback.py  test_fetcher_integration.py  test_fetcher_macro.py  test_llm.py  test_notify.py  test_onboard.py
